--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="description">Description</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_album">AlbumActivity</string>
-    
+
     <!-- Doctor Page -->
     <string name="create_doctor">Create Doctor</string>
     <string name="edit_doctor">Edit Doctor</string>
@@ -105,6 +105,7 @@
     <string name="contact_num1">Contact Number 1</string>
     <string name="contact_num2">Contact Number 2</string>
     <string name="children_under">Children Under</string>
-     <string name="edit_info">Edit Information</string>
+    <string name="edit_info">Edit Information</string>
+    <string name="title_activity_register_page3">RegisterPage3Activity</string>
 
 </resources>
