--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -117,5 +117,8 @@
     <string name="title_activity_register_partner2">RegisterPartner2Activity</string>
     <string name="title_activity_register_family">RegisterFamilyActivity</string>
     <string name="title_activity_task_without_ui">TaskWithoutUIActivity</string>
+    
+    <!-- Album Name in Gallery Android -->
+    <string name="album_name">Healthtime Journal</string>  
 
 </resources>
