added set parent photo, connected comment context

--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="title_activity_album">AlbumActivity</string>
 
     <!-- Doctor Page -->
+    <string name="doctor_profile">Doctor Profile</string>
     <string name="create_doctor">Create Doctor</string>
     <string name="edit_doctor">Edit Doctor</string>
     <string name="specialty">Specialty</string>
@@ -111,7 +112,6 @@
     <string name="contact_num1">Contact Number 1</string>
     <string name="contact_num2">Contact Number 2</string>
     <string name="children_under">Children Under</string>
-    <string name="edit_info">Edit Information</string>
     <string name="title_activity_register_page3">RegisterPage3Activity</string>
     <string name="title_activity_register_partner">RegisterPartnerActivity</string>
     <string name="title_activity_register_partner2">RegisterPartner2Activity</string>
