--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="previous">Previous</string>
     <string name="cancel">Cancel</string>
     <string name="addChild">Add Child</string>
+    <string name="setParent">Set Photo</string>
 
     <!-- Registration -->
     <string name="email">Username</string>
