--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="setParent">Set Photo</string>
 
     <!-- Registration -->
-    <string name="email">Username</string>
+    <string name="email">Email</string>
     <string name="pass">Password</string>
     <string name="step1">Step 1 of 2: Account Information</string>
     <string name="step2">Step 2 of 2: Personal Background</string>
@@ -60,6 +60,7 @@
     <string name="life_events">Life Events</string>
     <string name="health_growth">Health and Growth</string>
     <string name="timeline">Timeline</string>
+    <string name="about">About</string>
 
     <!-- Parent Profile -->
     <string name="my_shared">My Shared Accounts</string>
@@ -69,10 +70,12 @@
     <!-- Life Events -->
     <string name="firsts">Firsts</string>
     <string name="milestones">Milestones</string>
+    <string name="add_milestones">Add Milestone</string>
 
     <!-- Health and Growth -->
     <string name="weight_graph">Child Weight Progress</string>
     <string name="height_graph">Child Height Progress</string>
+    <string name="graph">Graph</string>
 
     <!-- Set Privilege Context -->
     <string name="level_3">Can Edit Profile</string>
@@ -92,8 +95,9 @@
     <string name="search">Search</string>
     <string name="post">Post</string>
     <string name="view_comment">Comment</string>
-    <string name="share_post">Share</string>
+    <string name="share_post">Share</string> 
     <string name="cross_mark">X</string>
+    <string name="sort">Sort</string>
 
     <!-- Post -->
     <string name="post_hint">What happened today?</string>
@@ -119,8 +123,9 @@
     <string name="title_activity_register_partner2">RegisterPartner2Activity</string>
     <string name="title_activity_register_family">RegisterFamilyActivity</string>
     <string name="title_activity_task_without_ui">TaskWithoutUIActivity</string>
-    
+
     <!-- Album Name in Gallery Android -->
-    <string name="album_name">Healthtime Journal</string>  
+    <string name="album_name">Healthtime Journal</string>
+    <string name="title_activity_profile_child">ProfileChildActivity</string>
 
 </resources>
