--- a/HealthtimeJournal/res/values/strings.xml
+++ b/HealthtimeJournal/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="cancel">Cancel</string>
     <string name="addChild">Add Child</string>
     <string name="setParent">Set Photo</string>
+    <string name="save">Save</string>
 
     <!-- Registration -->
     <string name="email">Email</string>
@@ -96,7 +97,7 @@
     <string name="search">Search</string>
     <string name="post">Post</string>
     <string name="view_comment">Comment</string>
-    <string name="share_post">Share</string> 
+    <string name="share_post">Share</string>
     <string name="cross_mark">X</string>
     <string name="sort">Sort</string>
 
@@ -128,5 +129,6 @@
     <!-- Album Name in Gallery Android -->
     <string name="album_name">Healthtime Journal</string>
     <string name="title_activity_profile_child">ProfileChildActivity</string>
+    <string name="title_activity_profile_parent">ProfileParentActivity</string>
 
 </resources>
